opraveno sticky menu, pridan hide efekt back-to-top

--- a/index.html
+++ b/index.html
@@ -408,6 +408,7 @@ OSTATNÍ DOVEDNOSTI
 						</div>
 					 </div>
 				</div>
+
 </section>
 
 
@@ -489,7 +490,7 @@ OSTATNÍ DOVEDNOSTI
 		-------------------------------------------------------->
 
 
-			<a href="#" class="back-to-top js--scroll-to-top">
+			<a href="#" class="back-to-top">
 				<ion-icon name="caret-up-circle-outline"></ion-icon>
 			</a>
 
@@ -520,8 +521,11 @@ OSTATNÍ DOVEDNOSTI
                 </div>
             </div>
             <div class="row">
-                <p>
-                   Vyhotoveno jako forma učení
+				<p><strong>Proč mám o tuto pozici zájem?</strong> Stručně...</p>
+				<p>Největší motivace jsou <strong>děti.</strong> Cestoval jsem hodně, chci mít možnost mít je nablízku a<strong> usadit se.</strong></p>
+				<p> Vždy jsem chtěl umět vytvářet webové stránky a programovat, <strong>baví mě to.</strong></p>
+				<p>
+                   Vyhotoveno jako forma učení.
                 </p>
 
 			</div>
