opravena chyba zobrazování textu v JS - snad

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <li><a  a href="#plans">Ostatní znalosti</a></li>
                         <li><a  href="#about">About</a></li>
                     </ul>
-                    <a class="mobile-nav-icon js--nav-icon"><ion-icon name="menu-outline"></ion-icon></i></a>
+                    <a class="mobile-nav-icon js--nav-icon"><ion-icon name="menu-outline"></ion-icon></a>
                 </div>
             </nav>
             <div class="name">
@@ -494,7 +494,7 @@ OSTATNÍ DOVEDNOSTI
 				<ion-icon name="caret-up-circle-outline"></ion-icon>
 			</a>
 
-</div>
+
 
 
 
