--- a/index.html
+++ b/index.html
@@ -10,32 +10,14 @@
         <link rel="stylesheet" type="text/css" href="vendors/css/ionicons.min.css">
         <link rel="stylesheet" type="text/css" href="vendors/css/animate.css">
         <link rel="stylesheet" type="text/css" href="resources/css/style.css">
-        <link rel="stylesheet" type="text/css" href="resources/css/queries.css">
+		<link rel="stylesheet" type="text/css" href="resources/css/queries.css">
+		<link rel="shortcut icon" type="image/png" href="resources/favicons/favicon-32x32.png">
         <link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;1,300&display=swap" rel="stylesheet">
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/jquery.ripples/0.5.3/jquery.ripples.min.js " rel="stylesheet">
 
         <title>AZ</title>
 
-
-
-		<link rel="apple-touch-icon" sizes="180x180" href="recources/favicons/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="recources/favicons/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="recources/favicons/favicon-16x16.png">
-		<link rel="manifest" href="recources/favicons/site.webmanifest">
-		<link rel="mask-icon" href="recources/favicons/safari-pinned-tab.svg" color="#5bbad5">
-		<link rel="shortcut icon" href="recources/favicons/favicon.ico">
-		<meta name="msapplication-TileColor" content="#da532c">
-		<meta name="msapplication-config" content="recources/favicons/browserconfig.xml">
-		<meta name="theme-color" content="#ffffff">
-
-
-        <link rel="manifest" href="/resources/favicons/manifest.json">
-        <link rel="shortcut icon" href="/resources/favicons/favicon.ico">
-        <meta name="msapplication-TileColor" content="#da532c">
-        <meta name="msapplication-TileImage" content="/resources/favicons/mstile-144x144.png">
-        <meta name="msapplication-config" content="/resources/favicons/browserconfig.xml">
-        <meta name="theme-color" content="#ffffff">
 
     </head>
 
