--- a/index.html
+++ b/index.html
@@ -32,16 +32,19 @@
                 <div class="row">
 					<a href="#">
 					  <img src="resources/img/logo-white.png" alt="AZ logo" class="logo">
-                    <img src="resources/img/logo.png" alt="AZ logo" class="logo-black js--scroll-to-top"></a>
+					<img src="resources/img/logo.png" alt="AZ logo" class="logo-black js--scroll-to-top">
+				</a>
 
                     <ul class="main-nav js--main-nav">
                         <li><a class="menuLink" href="#knowledge">Co umím</a></li>
                         <li><a class="menuLink"  href="#education">Vzdělání, praxe</a></li>
                         <li><a  class="menuLink" href="#plans">Ostatní znalosti</a></li>
                         <li><a class="menuLink" href="#about">About</a></li>
-                    </ul>
-                    <a class="mobile-nav-icon js--nav-icon"><ion-icon name="menu-outline"></ion-icon></a>
-                </div>
+					</ul>
+
+                  		  <a class="mobile-nav-icon js--nav-icon"><ion-icon name="menu-outline"></ion-icon></a>
+
+				</div>
 			</nav>
 			</div>
             <div class="name">
@@ -409,6 +412,33 @@ OSTATNÍ DOVEDNOSTI
 				</div>
 
 </section>
+
+
+<section class="section-ostatni">
+			<div class="images-wrapper">
+			<img src="resources/gallery/8.jpg" class="slider-img selected" alt="PranaySrivastavaSliderImg" />
+			<img src="resources/gallery/7.jpg" class="slider-img" alt="PranaySrivastavaSliderImg" />
+			<img src="resources/gallery/6.jpg" class="slider-img" alt="PranaySrivastavaSliderImg" />
+			<img src="resources/gallery/4.jpg" class="slider-img" alt="PranaySrivastavaSliderImg" />
+			<img src="resources/gallery/5.jpg" class="slider-img selected" alt="PranaySrivastavaSliderImg" />
+			<img src="resources/gallery/3.jpg" class="slider-img" alt="PranaySrivastavaSliderImg" />
+			<img src="resources/gallery/2.jpg" class="slider-img" alt="PranaySrivastavaSliderImg" />
+			<img src="resources/gallery/1.jpg" class="slider-img" alt="PranaySrivastavaSliderImg" />
+			</div>
+
+			<ul class="bullet-list">
+			<li class="bullets selected"><div class="outer-circle"><span></span></div></li>
+			<li class="bullets"><div class="outer-circle"><span></span></div></li>
+			<li class="bullets"><div class="outer-circle"><span></span></div></li>
+			<li class="bullets"><div class="outer-circle"><span></span></div></li>
+			<li class="bullets"><div class="outer-circle"><span></span></div></li>
+			<li class="bullets"><div class="outer-circle"><span></span></div></li>
+			<li class="bullets"><div class="outer-circle"><span></span></div></li>
+			<li class="bullets"><div class="outer-circle"><span></span></div></li>
+			</ul>
+
+ </section>
+
 
 
 
