pridan hover effect gallery

--- a/index.html
+++ b/index.html
@@ -416,14 +416,14 @@ OSTATNÍ DOVEDNOSTI
 
 <section class="section-ostatni">
 			<div class="images-wrapper">
-			<img src="resources/gallery/8.jpg" class="slider-img selected" alt="PranaySrivastavaSliderImg" />
-			<img src="resources/gallery/7.jpg" class="slider-img" alt="PranaySrivastavaSliderImg" />
-			<img src="resources/gallery/6.jpg" class="slider-img" alt="PranaySrivastavaSliderImg" />
-			<img src="resources/gallery/4.jpg" class="slider-img" alt="PranaySrivastavaSliderImg" />
-			<img src="resources/gallery/5.jpg" class="slider-img selected" alt="PranaySrivastavaSliderImg" />
-			<img src="resources/gallery/3.jpg" class="slider-img" alt="PranaySrivastavaSliderImg" />
-			<img src="resources/gallery/2.jpg" class="slider-img" alt="PranaySrivastavaSliderImg" />
-			<img src="resources/gallery/1.jpg" class="slider-img" alt="PranaySrivastavaSliderImg" />
+			<img src="resources/gallery/8.jpg" class="slider-img selected" alt="SliderImg" />
+			<img src="resources/gallery/7.jpg" class="slider-img" alt="SliderImg" />
+			<img src="resources/gallery/6.jpg" class="slider-img" alt="SliderImg" />
+			<img src="resources/gallery/4.jpg" class="slider-img" alt="SliderImg" />
+			<img src="resources/gallery/5.jpg" class="slider-img selected" alt="SliderImg" />
+			<img src="resources/gallery/3.jpg" class="slider-img" alt="SliderImg" />
+			<img src="resources/gallery/2.jpg" class="slider-img" alt="SliderImg" />
+			<img src="resources/gallery/1.jpg" class="slider-img" alt="SliderImg" />
 			</div>
 
 			<ul class="bullet-list">
