--- a/index.html
+++ b/index.html
@@ -32,11 +32,20 @@
 
 
         <span class="lang_switch">
-            <a class="left-top-font" onclick="set_lang('lang1')" href="#ln1" style="color:red">Česky</a> |
-            <a class="left-top-font" onclick="set_lang('lang2')" href="#ln2" style="color:red">English</a> |
-            <a class="left-top-font" onclick="set_lang('lang3')" href="#ln3" style="color:red">Deutsch</a>
+            <a class="left-top-font" onclick="set_lang('lang1')" href="#ln1" style="color:red"><img src="https://img.icons8.com/color/48/000000/czech-republic-circular.png"/></a> |
+            <a class="left-top-font" onclick="set_lang('lang2')" href="#ln2" style="color:red"><img src="https://img.icons8.com/color/48/000000/usa-circular.png"/></a> |
+            <a class="left-top-font" onclick="set_lang('lang3')" href="#ln3" style="color:red"><img src="https://img.icons8.com/color/48/000000/germany-circular.png"/></a>
 
         </span>
+
+        <div class="flags">
+            <a href="#" title="English"><span class="flag en"></span></a>
+            <a href="#" title="Cymraeg"><span class="flag cy"></span></a>
+            <a href="#" title="Francais"><span class="flag fr"></span></a>
+            <a href="#" title="Belgique"><span class="flag be"></span></a>
+            <a href="#" title="Italia"><span class="flag it"></span></a>
+            <a href="#" title="Deutch"><span class="flag de"></span></a>
+        </div>
 
 
 
