added some text in aboutme(in shortcut)

--- a/index.html
+++ b/index.html
@@ -989,7 +989,7 @@ OSTATNÍ DOVEDNOSTI
                                     <ion-icon name="trail-sign-outline"></ion-icon>Pracovní nabídka je v blízkosti mého
                                     bydliště, nemusím tedy dojíždět a mohu se více soustředit na svoji práci a
                                     volnočasové aktivity. Zejména pak JS, PHP a frameworky, které vyžadují a budou
-                                    vyžadovat měsíce studovaní.
+                                    vyžadovat měsíce studia.
                                 </li>
                                 <li>
                                     <ion-icon name="trail-sign-outline"></ion-icon>Práce se zkušenějšími kolegy a v
@@ -1620,6 +1620,8 @@ OSTATNÍ DOVEDNOSTI
                             <li>Bydliště: Třebíč</li>
                             <li>Svářeč</li>
                             <li>Žádné zdravotní indispozice</li>
+                            <li>Momentálně pracuji sice v ČR, ale denně dojíždím daleko</li>
+                            <li>Kódit a programovat se učím večer po práci a o víkendech</li>
 
 
                         </ul>
@@ -1691,7 +1693,8 @@ OSTATNÍ DOVEDNOSTI
                             <li>Place of residence: Trebic</li>
                             <li>Welder Freelancer</li>
                             <li>No medical conditions</li>
-
+                            <li>At the moment I work in the Czech Republic, but I travel far every day</li>
+                            <li>I learn to code and programming in the evening after work and on weekends</li>
 
                         </ul>
                     </div>
@@ -1756,8 +1759,10 @@ OSTATNÍ DOVEDNOSTI
                         <ul>
                             <li>Alter: 32 </li>
                             <li>Wohnungsort: Trebic</li>
-                            <li>Keine Erkrankungen</li>
                             <li>Schweißer</li>
+                            <li>Keine Erkrankungen</li>
+                            <li>Jetzt arbeite ich in der Tschechischen Republik, aber ich reise jeden Tag weit</li>
+                            <li>Ich lerne abends nach der Arbeit und am Wochenende einen Code zu schreiben und Programmieren</li>
 
 
                         </ul>
