deleted unused pictures in gallery

--- a/index.html
+++ b/index.html
@@ -1821,7 +1821,7 @@ BONUS SECTION   ENGLISH
                         <div>
                             <ul>
                                 <li>
-                                    <ion-icon name="trail-sign-outline"></ion-icon>I enjoy my current work, but it focuses primarily on skill. Other knowledge is rather a bonus. I want to do work that will <strong> allow me to develop more. </strong> English, German, programming, there is still (and will be), something to work on.
+                                    <ion-icon name="trail-sign-outline"></ion-icon>I enjoy my current work, but it focuses primarily on dexterity. Other knowledge is rather a bonus. I want to do work that will <strong> allow me to develop more. </strong> English, German, programming, there is still (and will be), something to work on.
 
                                 </li>
                                 <li>
